# HL-MakePIP

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
.github/workflows/: publish.yml
Codebase/: __init__.py  build_project.py  cli.py  register_to_pip.py  register_to_pypi.py  reigster_to_test_pypi.py  scaffold.py  setup_project_env.py
Codebase/Setup/: create_publish_yml.py  create_pypirc.py  create_pyproject_toml.py
bdist_wheel/: pyproject.toml
