[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piphelper"
version = "0.1.0"
description = "Library to scaffold and build pip packages from Codebase-style projects"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["build>=1.2.1"]

[project.scripts]
piphelper = "piphelper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["piphelper*"]
